	
	* sawfish.pc.in
	* sawfish.spec.in
	* debian/sawfish.install
	* src/Makefile.in: install headers to $includedir/sawfish/

	* src/client.c
	* src/sawfish.h: updated for librep 0.90.5 header directory change

	* src/sawfish.h: include config.h, if available, else sawfish_config.h

	* configure.in: bump minimum librep to 0.90.5
	                bump minimum rep-gtk to 0.90.2

2009-12-30  Timo Korvola <tkorvola@iki.fi>
	* lisp/sawfish/wm/commands/shrink-yank.jl: fixed docstrings

2009-12-29  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: auto-generate debian/control

	* debian/control: clean-up, configure-magic

	* debian/sawfish.install: updated

	* man/news.texi: updated

	* configure.in
	* config.h.in
	* src/dlmalloc.c: removed our own dlmalloc, as it breaks too many arches,
	                  and is therefore never in use since several years [Kim B. Heino]

2009-12-28  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: use `kde4-config --install data' instead of `kde4-config --path data' [Kim B. Heino]

	* sawfish.spec.in: find kde4/librep directories while runtime instead of hardcoding [Kim B. Heino]

	* man/news.texi: added 1.6.1 section
	                 updated
			 added Codenames to Headings

	* configure.in: generate debian/changelog from debian/changelog.in

2009-12-27  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: improve configures help message for better readability [Kim B. Heino]

	* lisp/sawfish/wm/workspace.jl
	* src/display.c: s/sawmill/sawfish/ [Kim B. Heino]

	* man/sawfish.texi: small misstake in doc

2009-12-22  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: revised

	* KEYBINDINGS: more description on KeyPad

	* README.IMPORTANT: updated

	* debian/changelog: removed, generated from .in file

	== 1.6.1 ==

	* configure.in: post-release version-bump to 1.6.1 "Astral"
			--without-nine-mouse-buttons is not allowed to have 4 hyphens,
			so it's now --without-nine-mousebuttons
