@@ -34,4 +34,6 @@ if [ -f configure.in ]; then
   autoconf $AUTOCONF_FLAGS || exit 1
 fi
 
-./configure "$@"
+if [ "${1}" != "--nocfg" ]; then
+	./configure "$@"
+fi
