@@ -35,7 +35,7 @@ Make $datadir/kde4/apps/ the fallback path, if KDE4 is not installed.
 [Kim B. Heino]
 
 @item Improved debian and rpm packaging scripts.
-[Christopher Bratusek]
+[Christopher Bratusek] [Kim B. Heino]
 
 @item The spec has been reworked to detect kde4/librep directories while runtime,
 instead of hardcoding those paths from configure, which makes it more portable.
