@@ -19,6 +19,10 @@
 	* configure.in: bump minimum librep to 0.90.5
 	                bump minimum rep-gtk to 0.90.2
 
+	* autogen.sh: added --nocfg flag for not running configure afterwards
+
+	* sawfish.spec.in: improved [Kim B. Heino]
+
 2009-12-30  Timo Korvola <tkorvola@iki.fi>
 	* lisp/sawfish/wm/commands/shrink-yank.jl: fixed docstrings
 
